[workspace]
members = [
    "crates/a_parser",
    "crates/a_regex_macro",
]

[package]
name = "better_php"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clap =  { version = "*", features = ["derive"] }
a_parser = { path = "crates/a_parser" }
